--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,12 @@ plugins {
     id 'java'
     id 'com.gradle.build-scan' version '1.16'
     id 'org.springframework.boot' version '2.0.5.RELEASE'
+    id "org.jetbrains.kotlin.jvm" version "1.2.71"
+    id "org.jetbrains.kotlin.plugin.noarg" version "1.2.71"
+}
+
+noArg {
+    annotation("com.example.springreactive.model.NoArg")
 }
 
 // Define the main class for the application
@@ -25,9 +31,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.71'
+    implementation 'org.jetbrains.kotlin:kotlin-noarg:1.2.71'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test:3.1.9.RELEASE'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
 
     components {
         withModule('org.springframework:spring-beans') {
